# WolfIsland

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  main.cpp
cmake_modules/: FindTGUI.cmake  Findrapidjson.cmake
config/: initParams.json
console/: program.cpp  program.h
controller/: Controller.cpp  Controller.h
include/: Animal.h  Cell.h  Field.h  Rabbit.h  Wolf.h  Wolf_M.h  Wolf_W.h
local/: .gitignore
logic/include/: Animal.h  Field.h  Wolf_M.h
logic/source/: Wolf_W.cpp
model/include/: Animal.h  Cell.h  Field.h  Rabbit.h  Wolf.h  Wolf_M.h  Wolf_W.h
model/source/: Animal.cpp  Cell.cpp  Field.cpp  Rabbit.cpp  Wolf.cpp  Wolf_M.cpp  Wolf_W.cpp
resources/logo/: logo-license.txt
source/: Rabbit.cpp  Wolf.cpp  Wolf_M.cpp
src/controller/: Controller.cpp  Controller.h
src/model/include/: Field.h  Rabbit.h  Wolf.h  Wolf_M.h  Wolf_W.h
src/model/source/: Field.cpp  Rabbit.cpp  Wolf_M.cpp
src/utils/: utils.cpp  utils.h
src/view/: BaseView.h  ConsoleView.cpp  ConsoleView.h
testing/: hello_world.cpp  hello_world.h
utils/: utils.cpp  utils.h
view/: BaseView.h  ConsoleView.cpp  ConsoleView.h  GUIView.cpp  GUIView.h  map.h  menu.cpp  menu.h
